--- a/forgerock-ui-user/pom.xml
+++ b/forgerock-ui-user/pom.xml
@@ -25,7 +25,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.forgerock.commons.ui</groupId>
+        <groupId>org.forgerock.ce.commons.ui</groupId>
         <artifactId>forgerock-ui</artifactId>
         <version>1.0.0</version>
     </parent>
@@ -36,7 +36,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.forgerock.commons.ui</groupId>
+            <groupId>org.forgerock.ce.commons.ui</groupId>
             <artifactId>forgerock-ui-commons</artifactId>
             <version>${forgerock-ui.version}</version>
             <type>zip</type>
@@ -119,7 +119,7 @@
                     <configuration>
                         <artifactItems>
                         <artifactItem>
-                            <groupId>org.forgerock.commons.ui</groupId>
+                            <groupId>org.forgerock.ce.commons.ui</groupId>
                             <artifactId>forgerock-ui-commons</artifactId>
                             <version>${forgerock-ui.version}</version>
                             <type>zip</type>
