--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.forgerock</groupId>
+		<groupId>org.forgerock.ce</groupId>
 		<artifactId>forgerock-parent</artifactId>
 		<version>1.1.0</version>
 	</parent>
@@ -23,7 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<groupId>org.forgerock.commons.ui</groupId>
+	<groupId>org.forgerock.ce.commons.ui</groupId>
 	<artifactId>forgerock-ui</artifactId>
 	<version>1.0.0</version>
 	<name>Forgerock Web UI</name>
@@ -44,9 +44,9 @@
 	</distributionManagement>
 	<repositories>
 		<repository>
-			<id>forgerock-staging-repository</id>
-			<name>ForgeRock Release Repository</name>
-			<url>http://maven.forgerock.org/repo/releases</url>
+			<id>forgerock-community-repository</id>
+			<name>ForgeRock Community Repository</name>
+			<url>http://maven.forgerock.org/repo/community</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
